# RAG_Intern_POC

./: .env.example  .gitignore  README.md  START_SERVER.bat  TEST_RAG.md  activate_venv.ps1  pyproject.toml  requirements.txt  run.py  run_app.ps1
app/: __init__.py  config.py  embeddings.py  ingest.py  logging_config.py  main.py  models.py  rag.py  vectorstore.py
docs/: CURRICULUM_MAPPING.md  LEARNING_GUIDE.md
sample_docs/: sample_drug_info.txt
src/app/: main.py
src/app/api/: routes.py
src/app/core/: config.py  logging.py
static/: index.html
